# zotero-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
reference/: perplexity-operations.md  zotero-operations.md
search/: index.py  search.py
